Fix overlapping results

--- a/client/src/components/HawkerSearchBar.css
+++ b/client/src/components/HawkerSearchBar.css
@@ -73,7 +73,7 @@
   border-radius: 25px;
   border: 3px solid #c5343b;
   padding: 20px;
-  position: fixed;
+  position: absolute;
   /* center the element */
   right: 0;
   left: 0;
